# pyx

./: .gitignore  LICENSE  README.md  demo.pyx  pyproject.toml
examples/: components.pyx  demo.pyx  naked_calls.pyx
pyx/: __init__.py  cli.py  runtime.py  transpiler.py
tests/: test_transpiler.py
