[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyx"
version = "0.1.0"
description = "JSX-like syntax for Python, transpiled to HTML string generation"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]

[project.scripts]
pyx = "pyx.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
